# reminder-app-tauri

./: .gitignore  PROGRESS.md  fix-path.ps1  index.html  package-lock.json  package.json  quick-add.bat  setup.ps1  show-list.bat  signing-key-for-github.txt  tailwind.config.js
.claude/: settings.local.json  settings.local.json.bak
.github/workflows/: release.yml
public/: notification.html  quick-add.html  reminder-bar.html
src/: App.tsx  index.css  types.ts
src-tauri/: .tauri-private-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appbar.rs  config.rs  error.rs  lib.rs  main.rs  reminder.rs  storage.rs  updater.rs  urlencoding.rs
src-tauri/src/storage/: drive.rs  legacy.rs  local.rs  merge.rs  mod.rs  oauth.rs
src/components/: CompletedSection.tsx  EditDialog.tsx  NotificationPopup.tsx  OrganizePrompt.tsx  ReminderInput.tsx  ReminderItem.css  ReminderItem.tsx  ReportsTab.tsx  SettingsDialog.tsx  TitleBar.tsx  Toast.tsx  index.ts
src/hooks/: useDragReorder.ts  useReminders.ts  useScheduler.ts
src/utils/: time.ts
